--- a/app/views/frontend/rating.html.erb
+++ b/app/views/frontend/rating.html.erb
@@ -1,2 +1,5 @@
-<h1>Frontend#rating</h1>
-<p>Find me in app/views/frontend/rating.html.erb</p>
+<% @images.each do |post| -%>
+    <div class="image_holder">
+      <%= image_tag post.image_link -%>
+    </div>
+<%- end -%>
