--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the frontend controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-@import "bootstrap";
+@import "bootstrap.min.css";
 
 .wrapper {
   position: relative;
