--- a/app/views/frontend/login.html.erb
+++ b/app/views/frontend/login.html.erb
@@ -1,3 +1,3 @@
-<%- %w(twitter instagram vkontakte facebook).each do |pr| -%>
+<%- %w(twitter instagram facebook).each do |pr| -%>
     <p><%= link_to %(Войти через #{pr}), %(/auth/#{pr}) -%></p>
 <%- end -%>
