--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <a class="brand" href="/">Lipton Insta 2013</a>
         <ul class="nav">
           <% if @user -%>
-              <li><%= link_to @user.name, action: :index, controller: :frontend -%></li>
+              <li><%= link_to @user.name, action: :view, controller: :frontend -%></li>
               <li><%= link_to 'выйти', action: :login, controller: :frontend -%> </li>
           <%- else -%>
               <li <%= %(class=active) if params[:action] == 'login' -%>><%= link_to 'логин', action: :login, controller: :frontend -%></li>
