--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -52,7 +52,7 @@
   <% @images.each do |post| -%>
       <div class="image-holder-holder">
         <div class="image-holder">
-          <div class="likes-counter <%= 'liked' if (@user.images.find_by_id(post_id) if @user) %>">
+          <div class="likes-counter <%= 'liked' if (@user.images.find_by_id(post.id) if @user) %>">
             <p><%= post.likes_count %></p></div>
           <div class="image-cropper"> <%= image_tag(post.image_link) -%></div>
           <div class="image-data"><span><%= image_tag post.auth.avatar_url, class: :avatar %></span>
