--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -28,7 +28,7 @@ body {
       float: right;
     }
     ul li {
-      width: 123px;
+      min-width: 123px;
       height: 48px;
       border-left: 1px solid rgba(255, 255, 255, 0.23);
       border-right: 1px solid #ffa914;
