--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -55,8 +55,8 @@
           <div class="likes-counter <%= 'liked' if (@user.images.find_by_id(post.id) if @user) %>">
             <p><%= post.likes_count %></p></div>
           <div class="image-cropper"> <%= image_tag(post.image_link) -%></div>
-          <div class="image-data"><span><%= image_tag post.auth.avatar_url, class: :avatar %></span>
-            <span> <%= post.auth.name %> </span> <span> <%= image_tag %(assets/#{post.provider}.png) %></span></div>
+          <div class="image-data"><%= image_tag post.auth.avatar_url, class: :avatar %>
+            <span> <%= post.auth.name %> </span> <%= image_tag %(assets/#{post.provider}.png) %></div>
         </div>
       </div>
   <%- end -%>
