--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
               <li><%= link_to @user.name, action: :view, controller: :frontend -%></li>
               <li><%= link_to 'выйти', action: :login, controller: :frontend -%> </li>
           <%- else -%>
-              <li <%= %(class=active) if params[:action] == 'login' -%>><%= link_to 'логин', action: :login, controller: :frontend -%></li>
+              <li <%= %(class=this) if params[:action] == 'login' -%>><%= link_to 'логин', action: :login, controller: :frontend -%></li>
           <%- end -%>
-          <li <%= %(class=active) if params[:action] == 'rating' -%>><%= link_to 'топ', action: :rating, controller: :frontend -%></li>
-          <li <%= %(class=active) if params[:action] == 'rules' -%>><%= link_to 'правила', action: :rules, controller: :frontend -%></li>
+          <li <%= %(class=this) if params[:action] == 'about' -%>><%= link_to 'О конкурсе', action: :about, controller: :frontend -%></li>
+          <li <%= %(class=this) if params[:action] == 'rules' -%>><%= link_to 'правила', action: :rules, controller: :frontend -%></li>
         </ul>
   </div>
   </div>
