--- a/app/views/frontend/about.html.erb
+++ b/app/views/frontend/about.html.erb
@@ -22,6 +22,8 @@
       но и авторизоваться на нашем сайте под тем же аккаунтом, с которого ты публикуешь фотографии.</p>
   </div>
   <div class="signup">
-    <%= link_to image_tag 'about_participate.png', action: :login %>
+    <div>
+      <%= link_to image_tag 'about_participate.png', action: :login %>
+    </div>
   </div>
 </div>
